--- a/src/sass/helpers/_variables.scss
+++ b/src/sass/helpers/_variables.scss
@@ -6,9 +6,8 @@
  */
 
 // Fonts
-$font-main: 'NeutraText-Book', sans-serif;
-/*$font-key: "DINNextLTPro-Regular", Helvetica, Arial, sans-serif;*/
-$font-bold: 'NeutraText-Bold', sans-serif;
+$font-main: sans-serif;
+$font-bold: sans-serif;
 
 // <hr> color
 $hr-color: #ccc;
